test/sema/param.yl
// RUN: compiler %s -res-dump 2>&1 | filecheck %s

// CHECK: [[# @LINE + 1 ]]:8: error: parameter 'x' has invalid type
fn foo(x: void, y: customType): void {}

// CHECK: [[# @LINE + 1 ]]:19: error: parameter 'y' has invalid type
fn bar(x: number, y: customType): void {}

// CHECK: [[# @LINE + 1 ]]:31: error: redeclaration of 'x'
fn redeclaredParam(x: number, x: number): void {}

fn main(): void {}
